# fusion-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Jenkinsfile  README.md  build.rs  mise.toml
.github/workflows/: build-binaries.yml  docker-ghcr.yml  docker-gitea.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/api/: doc.rs  mod.rs  routes.rs
api/src/api/extractors/: mod.rs
api/src/api/handlers/: mod.rs  pagination.rs
api/src/api/handlers/auth/: handler.rs
api/src/api/handlers/user/: handler.rs
api/src/api/middleware/: auth_middleware.rs  error_middleware.rs  mod.rs  trace_middleware.rs
api/src/config/: application.rs  config.rs  database.rs  environment.rs  job.rs  jwt.rs  logging.rs  mod.rs  server.rs  settings.rs
api/src/domain/: user.rs
api/src/dto/: auth.rs  mod.rs  user.rs
api/src/error/: db.rs  ext.rs  mod.rs  response.rs  types.rs
api/src/job/: check_lived.rs  mod.rs  registry.rs  types.rs
api/src/notification/: mod.rs  provider.rs
api/src/notification/bark/: bark.rs  client.rs  mod.rs  msg.rs
api/src/repository/: mod.rs  user_repo.rs
api/src/service/: auth_service.rs  mod.rs  user_service.rs
api/src/utils/: jwt.rs  mod.rs  password.rs
config/: default.toml  development.toml
entity/: Cargo.toml  README.md
entity/src/: lib.rs  prelude.rs  user.rs
live-platform/: Cargo.toml
live-platform/src/: lib.rs  provider.rs  types.rs
live-platform/src/bilibili/: dto.rs  mod.rs
live-platform/src/douyu/: dto.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251130_070455_create_user_table.rs
src/: cli.rs  main.rs
