[package]
name = "fusion"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "api", "entity", "live-platform", "migration"]

[dependencies]
tokio = { version = "1.0", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }

api = { path = "api" }
migration = { path = "migration" }

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
