[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-macros = "0.5"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "cors", "trace", "request-id", "compression-full"] }

config = { version = "0.15", features = ["yaml", "toml"] }
dotenvy = "0.15"

anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio", "macros", "debug-print"] }

migration = { path = "../migration" }
entity = { path = "../entity" }
