[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-macros = "0.5"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "cors", "trace", "request-id", "compression-full"] }

tokio-cron-scheduler = { version = "0.15", features = [] }
uuid = "1.19"

config = { version = "0.15", features = ["yaml", "toml"] }

anyhow = "1"
thiserror = "2"

argon2 = { version = "0.6.0-rc.2", features = ["getrandom"] }

tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-log = "0.2"
flate2 = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
cron = "0.15"

sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio", "macros", "debug-print"] }

utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = { version = "0.2" }

migration = { path = "../migration" }
entity = { path = "../entity" }
live-platform = { path = "../live-platform" }
